fix: or spacing works

--- a/style.css
+++ b/style.css
@@ -1233,57 +1233,57 @@ footer p {
 
 
 .login-section {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 1920px;
+    height: 1077px;
+    margin-inline: 140px;
+    margin-top: 126px;
+    margin-bottom: 122px;
+    overflow-x: hidden;
 }
 
 .login-boxes {
-    width: 1720px;
-    height: 877px;
+    width: 1920px;
+    height: 1077px;
     /* background-color: red; */
     display: flex;
     align-items: center;
-    gap: 140px;
     border: 1px solid #dbdbdb;
     border-radius: 0 30px 30px 0;
 }
 
 .login-section .img-container {
-    width: 850px;
-    height: 877px;
+    width: 949px;
+    height: 1077px;
 }
 
 .login-section .img-container img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .login-area {
     height: 100%;
     flex: 1;
+    margin-left: 187px;
     /* background-color: cyan; */
-    margin-right: 80px;
 }
 
 .login-area .header {
-    margin-top: 60px;
-    font-size: 58px;
+    margin-top: 91px;
+    font-size: 66.6px;
     font-family: var(--fontFamily-volkhov);
     color: #484848;
 }
 
 .login-section .input-container {
-    margin-top: 20px;
+    margin-top: 82.3px;
 }
 
 
 .login-section .login-area .input-container p {
-    margin-bottom: 18px;
-    font-size: 24px;
+    font-size: 30px;
+    line-height: 40px;
     font-family: var(--fontFamily-volkhov);
     color: #000;
 }
@@ -1310,14 +1310,15 @@ footer p {
 }
 
 .login-section .input-container .buttons {
+    margin-top: 29px;
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    gap: 50px;
+    gap: 64px;
 }
 
 .login-section .input-container .buttons .btn {
-    width: 270px;
+    width: 294px;
     height: 55px;
     border: 1px solid #5b86e5;
     border-radius: 8px;
@@ -1327,15 +1328,19 @@ footer p {
 }
 
 .login-section .buttons .btn .text {
-    margin-left: 18px;
+    margin-left: 13px;
+    font-size: 16px;
+    line-height: 40px;
 }
 
 .login-section .or {
+    width: 100%;
+    height: 40px;
+    margin-top: 90px;
     display: flex;
-    gap: 5px;
+    gap: 13px;
     align-items: center;
-    margin-top: 40px;
-    margin-left: 238px;
+    margin-left: 262px;
 }
 
 .login-section .or .sep {
@@ -1345,7 +1350,10 @@ footer p {
 }
 
 .login-section .or-text {
-    font-size: 26px;
+    font-size: 30px;
+    line-height: 40px;
+    letter-spacing: 0.8;
+    font-weight: 500;
     color: #838383;
 }
 
